# phyrexian-library

./: Cargo.toml  rustfmt.toml
phyrexian-library/: Cargo.toml
phyrexian-library/src/: lib.rs
phyrexian-library/src/utility/: download.rs  image_tools.rs
phyrexian-library/src/utility/download/: download_manager_tests.rs  download_mod_tests.rs  test.rs
src/: arguments.rs  lib.rs  magic.rs  utility.rs
src/application/: config.rs  error.rs
src/application/config/: test.rs
src/magic/: card.rs  colour.rs  language.rs  legality.rs  physical_card.rs  rarity.rs
src/magic/colour/: test.rs
src/magic/language/: test.rs
src/magic/language/test/: language_test.rs  localised_string_test.rs
src/magic/rarity/: test.rs
src/utility/: download.rs  image_tools.rs
src/utility/download/: test.rs
src/utility/download/test/: download_manager_tests.rs  download_status_tests.rs
