[package]
name = "phyrexian_library"
version = "0.1.0"
authors = ["at-robins"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
derive_builder = "0.9"
getset = "0.1"
image = "0.23"
parking_lot = "0.11"
rayon = "1.5"
reqwest = "0.9"
rusqlite = {version = "0.24", features = ["bundled"]}
serde = "1.0"
serde_json = "1.0"
uuid = {version = "0.8", features = ["serde", "v1"]}
