[package]
name = "phyrexian_library"
version = "0.1.0"
authors = ["at-robins"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.40", features = ["serde"]}
clap = {version = "4.5.32", features = ["derive"]}
derive_builder = "0.9"
getset = "0.1"
image = "0.25.5"
parking_lot = "0.12"
rayon = "1.5"
reqwest = "0.9"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = {version = "0.8", features = ["serde", "v1"]}
